stylesheets/_message.scss
@for $i from 1 through 6 {
  ul.column_#{$i} .front, ul.column_#{$i} .back {
    background: nth($column-colors-main, $i);
  }

  ul.column_#{$i} .votes {
    background: nth($column-colors-votes, $i);
  }
}

.message-list {
  margin-left: 15px;
  flex-basis: 0;
  flex-grow: 1;

  @media (max-width: 500px) {
    margin: 0 15px;

    &:not(.selected) {
      display: none;
    }
  }

  &:last-child {
    margin-right: 15px;
  }
}

.text {
  padding-right: 15px;
  word-break: break-word;
  white-space: pre-line;
}

.message-body {
  padding: 0.5em;

  a {
    position: absolute;
    top: 0.4em;
    right: 0.5em;
  }
}

.votes {
  @include position(absolute, null 0 0 null);
  display: block;
  height: 17px;
  padding: 0.3em 0.4em;
  font-size: 0.89em;
  text-align: right;
}

.placeholder {
  width: 90%;
  color: white;
  word-break: break-word;
  white-space: pre-line;
  visibility: hidden;
}

.message {
  @include transform-style(preserve-3d);
  @include transition(top 0.3s ease-in-out);
  @include perspective(500);
  display: block;
  height: auto;
  padding-bottom: 20px;
  margin-bottom: 29px;
  background: transparent;
  border-radius: 2px;

  textarea {
    @include size(100% 100%);
    padding: 0.3em 0.5em;
    padding-bottom: 0;
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
    resize: none;
    border: none;
  }
}

.message .filter .text {
  filter: blur(3px);
}

.message .front {
  @include transition(all 0.4s ease-in-out);
  @include transform(rotateX(0deg) rotateY(0deg));
  @include transform-style(preserve-3d);
  @include backface-visibility(hidden);
  @include position(absolute, 0 null null 0);
  @include size(100% 100%);
  z-index: 900;
  padding-bottom: 1em;
  color: white;
  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
          box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

.message .back {
  @include transform-style(preserve-3d);
  @include transition(all 0.4s ease-in-out);
  @include backface-visibility(hidden);
  @include transform(rotateY(-180deg));
  @include position(absolute, 0 null null 0);
  @include size(100% 100%);
  z-index: 800;
  padding-bottom: 1em;
  color: white;
  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
          box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

.message.flip .front {
  z-index: 900;
  -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
          transform: rotateY(180deg);
}

.message.flip .back {
  z-index: 1000;
  -webkit-transform: rotateX(0deg) rotateY(0deg);
     -moz-transform: rotateX(0deg) rotateY(0deg);
          transform: rotateX(0deg) rotateY(0deg);
}

.message.flip .back button {
  animation: show 0.4s normal forwards ease-in-out;
}

.message .back button {
  animation: hide 0.4s normal forwards ease-in-out;
}

@keyframes hide {
  0% {
    opacity: 1;
  }
  33% {
    opacity: 1;
  }
  66% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

@keyframes show {
  0% {
    opacity: 0;
  }
  33% {
    opacity: 0;
  }
  66% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

.back a {
  color: #ef5350;

  &:hover {
    color: #c33b38;
  }
}

